# Svyaz

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY_CHANGES.md  _check.py  _check2.py  _check3.py  _check4.py  _check5.py  _check6.py  _final_check.py  _fix_nonces.py  _test_core.py  _test_csrf.py  _test_csrf2.py  _test_e2e.py  _test_final.py  _test_nocsrf.py  _verify.py  _verify2.py  alembic.ini  app.py  backup.sh  celery_app.py  deploy.yml  docker-compose.yml  inventory  module.py  nginx.conf  prometheus.yml  pyproject.toml  pytest.ini  redis-sentinel.conf  requirements.txt  restore.sh  start_dev.bat  test_app.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py
grafana/dashboards/: svyaz_dashboard.json
instance/: social_media.db
migrations/: 001_it_social_network.sql  001_production_security.sql  002_channels.sql  003_ideas_v2.sql
migrations/versions/: add_project_type.py
secrets/: db_password.txt.example  db_replication_password.txt.example
static/: robots.txt
static/.well-known/: security.txt
static/css/: style.css
templates/: base.html  channel_create.html  channel_edit.html  channel_members.html  channel_page.html  channels.html  chats.html  create_group.html  error.html  feed.html  hashtag.html  idea_create.html  idea_detail.html  idea_edit.html  ideas.html  index.html  login.html  macros.html  market.html  notifications.html  post.html  premium.html  profile.html  profile_edit.html  register.html  search.html  totp_recovery_codes.html  totp_setup.html  totp_verify.html
(+1 files in other folders)
