[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "svyaz"
version = "1.0.0"
description = "IT social network for developers"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.1.1,<3.2",
    "Flask-SQLAlchemy>=3.1,<3.2",
    "Flask-Login>=0.6,<0.7",
    "Flask-Limiter>=3.8,<3.9",
    "Flask-Talisman>=1.1,<1.2",
    "Werkzeug>=3.1.6,<3.2",
    "SQLAlchemy>=2.0,<2.1",
    "psycopg2-binary>=2.9,<2.10",
    "redis>=5.2,<5.3",
    "gunicorn>=23.0,<23.1",
    "python-dotenv>=1.0,<1.1",
    "alembic>=1.14,<1.15",
    "nh3[security]>=0.2.18",
    "pyotp>=2.9,<2.10",
    "qrcode[pil]>=7.4,<7.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_app.py"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "BLE"]
ignore = ["E501", "S101"]

[tool.dependabot]
package-ecosystem = "pip"
directory = "/"
schedule = "weekly"
